--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -1,43 +1,80 @@
-name: CI
+name: Build & Test App
 
 on:
+  pull_request:
+    paths:
+      - '**'
+      - '!**.md'
+      - '!i18n/src/commonMain/moko-resources/**/strings.xml'
+      - '!i18n/src/commonMain/moko-resources/**/plurals.xml'
+      - 'i18n/src/commonMain/moko-resources/base/strings.xml'
+      - 'i18n/src/commonMain/moko-resources/base/plurals.xml'
   push:
     branches:
       - main
-  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build & Sign APK
+    runs-on: ubuntu-24.04
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v5
+      - name: Set up JDK 17
+        uses: actions/setup-java@v5
         with:
           java-version: 17
           distribution: temurin
 
-      - uses: gradle/actions/setup-gradle@v5
-
-      - name: Build
-        run: ./gradlew assembleRelease
-
-      - uses: android-actions/setup-android@v3
+      - name: Set up Android SDK (build-tools 34)
+        uses: android-actions/setup-android@v3
         with:
           api-level: 34
           build-tools: 34.0.0
 
-      - name: Decode keystore
-        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
+      - name: Build release (unsigned) APK(s)
+        run: ./gradlew assembleRelease
 
-      - name: Sign APK
+      - name: Decode and import keystore  (only on main branch)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          APK_PATH=$(find . -name "*.apk" -path "*/release/*" | head -1)
-          $ANDROID_HOME/build-tools/34.0.0/apksigner sign --ks keystore.jks --ks-key-alias ${{ secrets.KEY_ALIAS }} --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} --key-pass pass:${{ secrets.KEY_PASSWORD }} "$APK_PATH"
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release.keystore
 
-      - name: Upload APKs
+      - name: Sign all release APKs
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          for apk in app/build/outputs/apk/release/*.apk; do
+            echo "Signing $apk"
+            $ANDROID_HOME/build-tools/34.0.0/apksigner sign \
+              --ks release.keystore \
+              --ks-key-alias "${{ secrets.KEY_ALIAS }}" \
+              --ks-pass pass:"${{ secrets.KEYSTORE_PASSWORD }}" \
+              --key-pass pass:"${{ secrets.KEY_PASSWORD }}" \
+              "$apk"
+          done
+
+      - name: Upload signed APKs
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v5
         with:
-          name: apk
-          path: "**/*.apk"
+          name: signed-apks
+          path: app/build/outputs/apk/release/*.apk
+
+      - name: Run unit tests
+        run: ./gradlew testReleaseUnitTest
+
+      - name: Upload test report (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v5
+        with:
+          name: test-report-${{ github.sha }}
+          path: app/build/reports/tests/testReleaseUnitTest
