--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -1,80 +1,180 @@
+# yaml
 name: Build & Test App
 
 on:
-  pull_request:
-    paths:
-      - '**'
-      - '!**.md'
-      - '!i18n/src/commonMain/moko-resources/**/strings.xml'
-      - '!i18n/src/commonMain/moko-resources/**/plurals.xml'
-      - 'i18n/src/commonMain/moko-resources/base/strings.xml'
-      - 'i18n/src/commonMain/moko-resources/base/plurals.xml'
   push:
     branches:
       - main
+    paths:
+      - '**'
+      - '!**.md'
+      - '!.github/**'
+      - '.github/scripts/**'
+      - '.github/workflows/build_push.yml'
+  workflow_dispatch:
+
+permissions: {}
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
+env:
+  CI_CHUNK_SIZE: 65
+  IS_PR_CHECK: false
+  PUBLISH_REPOSITORY: mrissaoussama/extensions
+  SOURCE_REPOSITORY: mrissaoussama/extensions-source
 
 jobs:
-  build:
-    name: Build & Sign APK
-    runs-on: ubuntu-24.04
-
+  prepare:
+    name: Prepare job
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    outputs:
+      matrix: ${{ steps.generate-matrices.outputs.matrix }}
+      delete: ${{ steps.generate-matrices.outputs.delete }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout main branch
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v5
+      - name: Set up Java
+        uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
         with:
           java-version: 17
           distribution: temurin
 
-      - name: Set up Android SDK (build-tools 34)
-        uses: android-actions/setup-android@v3
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2
         with:
-          api-level: 34
-          build-tools: 34.0.0
+          cache-read-only: true
 
-      - name: Build release (unsigned) APK(s)
-        run: ./gradlew assembleRelease
+      - name: Get last successful CI commit
+        uses: nrwl/nx-set-shas@3e9ad7370203c1e93d109be57f3b72eb0eb511b1
+        with:
+          fallback-sha: 4b825dc642cb6eb9a060e54bf8d69288fbee4904
 
-      - name: Decode and import keystore  (only on main branch)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - id: generate-matrices
+        name: Create output matrices
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release.keystore
+          python ./.github/scripts/generate-build-matrices.py "$NX_BASE" Release
 
-      - name: Sign all release APKs
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  build:
+    name: Build extensions (${{ matrix.chunk.number }})
+    needs: prepare
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    if: ${{ toJson(fromJson(needs.prepare.outputs.matrix).chunk) != '[]' }}
+    strategy:
+      matrix: ${{ fromJSON(needs.prepare.outputs.matrix) }}
+    steps:
+      - name: Checkout main branch
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
+        with:
+          persist-credentials: false
+
+      - name: Set up Java
+        uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2
+        with:
+          cache-read-only: ${{ matrix.chunk.number > 1 }}
+
+      - name: Prepare signing key
         run: |
-          find . -name "*.apk" -path "*/build/outputs/apk/release/*" | while read apk; do
-            echo "Signing $apk"
-            $ANDROID_HOME/build-tools/34.0.0/apksigner sign \
-              --ks release.keystore \
-              --ks-key-alias "${{ secrets.KEY_ALIAS }}" \
-              --ks-pass pass:"${{ secrets.KEYSTORE_PASSWORD }}" \
-              --key-pass pass:"${{ secrets.KEY_PASSWORD }}" \
-              "$apk"
+          echo ${{ secrets.SIGNING_KEY }} | base64 -d > signingkey.jks
+
+      - name: Build extensions (${{ matrix.chunk.number }})
+        env:
+          MODULES: ${{ join(matrix.chunk.modules, ' ') }}
+          ALIAS: ${{ secrets.ALIAS }}
+          KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        run: |
+          echo "MODULES: $MODULES"
+          # list gradle projects once for validation
+          ./gradlew projects --no-daemon > gradle-projects.txt || true
+          echo "Gradle projects:"
+          sed -n '1,200p' gradle-projects.txt || true
+
+          for TASK in $MODULES; do
+            echo "Processing requested task: $TASK"
+            PROJECT_PATH="${TASK%:*}"
+            if [ -z "$PROJECT_PATH" ]; then
+              echo "Invalid task format (no project path): $TASK — skipping"
+              continue
+            fi
+
+            # Check if project path exists in gradle projects output
+            if grep -Fq "$PROJECT_PATH" gradle-projects.txt; then
+              echo "Found project $PROJECT_PATH — running: ./gradlew $TASK"
+              ./gradlew "$TASK" --no-daemon || { echo "Task $TASK failed"; exit 1; }
+            else
+              echo "Project $PROJECT_PATH not found — skipping task $TASK"
+            fi
           done
 
-      - name: Upload signed APKs
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v5
+      - name: Upload APKs (${{ matrix.chunk.number }})
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4
+        if: ${{ github.repository == env.SOURCE_REPOSITORY }}
         with:
-          name: signed-apks
-          path: "**/build/outputs/apk/release/*.apk"
+          name: "individual-apks-${{ matrix.chunk.number }}"
+          path: "**/*.apk"
+          retention-days: 1
 
-      - name: Run unit tests
-        run: ./gradlew testReleaseUnitTest
+      - name: Clean up CI files
+        run: rm -f signingkey.jks gradle-projects.txt
 
-      - name: Upload test report (on failure)
-        if: failure()
-        uses: actions/upload-artifact@v5
+  publish:
+    name: Publish extension repo
+    needs: [prepare, build]
+    if: ${{ github.repository == env.SOURCE_REPOSITORY }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Download APK artifacts
+        uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53
         with:
-          name: test-report-${{ github.sha }}
-          path: "**/build/reports/tests/testReleaseUnitTest"
+          path: ~/apk-artifacts
+
+      - name: Set up JDK
+        uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: Checkout main branch
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
+        with:
+          ref: main
+          path: main
+          persist-credentials: false
+
+      - name: Create repo artifacts
+        run: |
+          cd main
+          python ./.github/scripts/move-built-apks.py
+          python ./.github/scripts/create-repo.py
+
+      - name: Checkout repo branch
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
+        with:
+          repository: ${{ env.PUBLISH_REPOSITORY }}
+          token: ${{ secrets.PUBLISH_TOKEN }}
+          ref: repo
+          path: repo
+          persist-credentials: true
+
+      - name: Merge and deploy repo
+        env:
+          DELETE: ${{ needs.prepare.outputs.delete }}
+        run: |
+          cd repo
+          python ../main/.github/scripts/merge-repo.py "$DELETE"
+          ../main/.github/scripts/commit-repo.sh
