Update English extensions and multisrc libraries (#2751)
* **General**: Rename namespace to `app.mihonnovel.extension` and update archive names in `common.gradle`.
* **Multisrc**:
    * **MadaraNovel**: Add preference for reversing chapter lists and improve pagination selector support.
    * **ReadNovelFull**: Implement comprehensive genre, type, and status filters.
    * **ReadWN/LightNovelWPNovel**: Explicitly override `isNovelSource`.
* **Foxaholic**: Rewrite `fetchPageText` to correctly extract nested content from ad-heavy pages.
* **NovelUpdates**: Significant update adding chapter content selectors for 14+ specific domains, improving tag handling, and implementing advanced search filters (Tags, Reading List).
* **StorySeedling**: Improve pagination parsing and implement detailed Genre, Tag, and Status filters.
* **Translatin Otaku**: Migrate from `MadaraNovel` multisrc to a custom implementation to handle specific AJAX search and pagination requirements.
* **FansMTL**: Migrate from `ReadWN` multisrc to a custom implementation to support its specific URL patterns and search behavior.
* **WebNovel**: Update mobile/desktop site selectors and headers to fix novel list parsing.
* **ScribbleHub**: Implement advanced Tag filters with inclusive/exclusive text inputs and fix text search pagination.
* **NovelFire**: Improve title extraction fallbacks and add default cover image handling.
* **RoyalRoad**: Improve pagination detection and metadata extraction (status, cover, description).
* **MtlReader**: Add "Reverse Chapter List" preference and improve content extraction strategies.
* **WtrLab**: Fix Google Translate API response parsing for translated content.
* **MVLEMPYR**: Implement comprehensive Genre, Tag, and Sort filters using the WP-JSON API.
* **FictionZone**: Fix `getMangaUrl` implementation.
* **NovelBuddy**: Normalize relative URLs to prevent base URL duplication.
* **NovelsHub**: Add extensive Genre filter list.

--- a/common.gradle
+++ b/common.gradle
@@ -14,7 +14,7 @@ if (theme != null) evaluationDependsOn(theme.path)
 android {
     compileSdk AndroidConfig.compileSdk
 
-    namespace "eu.kanade.tachiyomi.extension"
+    namespace "app.mihonnovel.extension"
     sourceSets {
         main {
             manifest.srcFile layout.buildDirectory.file('tempAndroidManifest.xml')
@@ -31,12 +31,15 @@ android {
         versionCode theme == null ? extVersionCode : theme.baseVersionCode + overrideVersionCode
         versionName "1.4.$versionCode"
         base {
-            archivesName = "tachiyomi-$applicationIdSuffix-v$versionName"
+            archivesName = "mihonnovel-$applicationIdSuffix-v$versionName"
         }
         assert extClass.startsWith(".")
+        // Build full class path using eu.kanade.tachiyomi namespace (source code namespace)
+        // since the APK package name is app.mihonnovel.extension but source classes are in eu.kanade.tachiyomi
+        String fullExtClass = "eu.kanade.tachiyomi.extension." + project.parent.name + "." + project.name + extClass
         manifestPlaceholders = [
-                appName : "Tachiyomi: $extName",
-                extClass: extClass,
+                appName : "MihonNovel: $extName",
+                extClass: fullExtClass,
                 nsfw    : project.ext.find("isNsfw") ? 1 : 0,
                 novel   : project.ext.find("isNovel") ? 1 : 0,
         ]
