fix: Adjust to tsundoku dest

--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -194,7 +194,7 @@ jobs:
       - name: Checkout repo branch
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          repository: keiyoushi/extensions
+          repository: tsundoku-otaku/extensions
           token: ${{ secrets.BOT_PAT }}
           ref: repo
           path: repo
